--- a/24 - Sticky Nav/style-START.css
+++ b/24 - Sticky Nav/style-START.css
@@ -86,3 +86,17 @@ nav a {
   transition: all 0.2s;
   text-transform: uppercase;
 }
+
+nav.fixed-nav {
+  position: sticky;
+  box-shadow: 0 5px 0 rgba(0,0,0,0.1);
+  top: -1px;
+}
+
+nav.fixed-nav > ul > li.logo {
+  max-width: 500px;
+}
+
+nav.fixed-nav + .site-wrap {
+  transform: scale(1);
+}
